<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Boton_Inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Visualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <ImageView
        android:id="@+id/Imagen_Inicio"
        android:layout_width="600dp"
        android:layout_height="200dp"
        android:contentDescription="@string/Imagen_Inicio_App"
        app:layout_constraintBottom_toTopOf="@+id/Boton_Inicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/artgallery"
        tools:visibility="visible" />

    <Button
        android:id="@+id/Boton_Creditos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Informacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Boton_Inicio" />

</androidx.constraintlayout.widget.ConstraintLayout>


